--- a/experiments/credit_score_formula_test.ipynb
+++ b/experiments/credit_score_formula_test.ipynb
@@ -775,6 +775,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27628156250000000000\n",
+      "276.2815625\n",
+      "0.27628156250000035\n",
+      "276.28156250000035\n"
+     ]
+    }
+   ],
+   "source": [
+    "def intmethod(interestRate = 500, principal = 1000):\n",
+    "    nDays = 5\n",
+    "    interestsPct = ( 10000 + interestRate )**nDays - 10000**nDays\n",
+    "    print(interestsPct)\n",
+    "    return (principal*interestsPct)/10000**nDays\n",
+    "\n",
+    "def normalmethod(interestRate = 5, principal = 1000):\n",
+    "    nDays = 5\n",
+    "    interestsPct = ( 1 + interestRate/100 )**nDays - 1\n",
+    "    print(interestsPct)\n",
+    "    return principal*interestsPct\n",
+    "            \n",
+    "print(intmethod())\n",
+    "print(normalmethod())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
