Lenders' yield calculated now taking into account capital and days. Not integrated yet with LendingPool.

--- a/experiments/credit_score_formula_test.ipynb
+++ b/experiments/credit_score_formula_test.ipynb
@@ -808,6 +808,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8\n",
+      "80.0 40.0\n",
+      "1.5\n",
+      "120.0 60.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def test():\n",
+    "    a = 100\n",
+    "    b = 50\n",
+    "    c = a + b\n",
+    "    c -= 30\n",
+    "    x = c/(30+c)\n",
+    "    print(x)\n",
+    "    a*=x\n",
+    "    b*=x\n",
+    "    print(f\"{a} {b}\")\n",
+    "    c+=60\n",
+    "    x = c/(c-60)\n",
+    "    print(x)\n",
+    "    a*=x\n",
+    "    b*=x\n",
+    "    print(f\"{a} {b}\")\n",
+    "    \n",
+    "test()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
